--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
         import { config } from './config.js';
         import { initTileLoader } from './js/features/tileLoader.js';
         import { initLocationLoader } from './js/features/locationLoader.js';
-        import { initSchoolDiggerSearch } from './js/features/schoolDiggerSearch.js';
+        import { initPrivateSchoolsSearch } from './js/features/privateSchoolsSearch.js';
         import { MapCore } from './js/core/mapCore.js';
 
         // Wait for DOM and scripts to load
@@ -476,7 +476,7 @@
             map.on('load', () => {
                 initTileLoader(map);
                 initLocationLoader(map);
-                initSchoolDiggerSearch(map);
+                initPrivateSchoolsSearch(map);
             });
         });
     </script>
